modified:   assets/main/styles/main.css 	new file:   assets/projects/templates/explicit/style.css 	new file:   assets/projects/templates/images/simple_login_+_register_form.png 	new file:   assets/support/explicit/style/style.css 	modified:   index.html 	new file:   projects/templates/index.html 	new file:   projects/templates/simple_login_+_register_form/index.html 	modified:   support/index.html 	new file:   z.html

--- a/assets/main/styles/main.css
+++ b/assets/main/styles/main.css
@@ -2,5 +2,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f3f3f3;
+    background-color: hsl(0, 0%, 95%);
+}
+.content {
+    width: 1000px;
+    max-width: 1000px;
+    padding: 20px;
+    background-color: hsl(0, 0%, 97%);
+    border-radius: 20px;
 }
