modified:   projects/templates/index.html

--- a/projects/templates/index.html
+++ b/projects/templates/index.html
@@ -29,7 +29,7 @@
                 <img src="../../assets/projects/templates/images/simple_login_+_register_form.png" alt="simple_login_+_register_form.png" class="template-img">
                 <br>
                 <a class="bold">Product Informations:</a><br>
-                <a>Type:&nbsp;&nbsp;&nbsp;only html / cs&nbsp;&nbsp;&nbsp;-->&nbsp;&nbsp;&nbsp;script not included</a>
+                <a>Type:&nbsp;&nbsp;&nbsp;only html / css&nbsp;&nbsp;&nbsp;-->&nbsp;&nbsp;&nbsp;script not included</a>
             </div>
         </div>
       </div>
